Archive2/fd/96e6fa98c08afd/main.cpp
#include <vector>

enum class A::B;

class A : public std::vector<A::B>
{
public:
    enum class B
    {
    };
};

int main()
{
}